--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.JPlay.jar=lib\\JPlay.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JPlay.jar}
+    ${file.reference.JPlay.jar}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
